python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa6~maverick1) maverick; urgency=low

  * Fix Maintainer field.
    - Also set distribution in debian/rules to Ubuntu-PPA so Maintainer doesn't
      get overridden.
  * Bump Standards-Version to 3.8.4.
  * Correctly depend on and suggest related packages.
    - Specifically Tk for Idle and Tk and GDBM debug packages.

 -- Felix Krull <f_krull@gmx.de>  Mon, 13 Sep 2010 15:41:26 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa5) lucid; urgency=low

  * python-idle: Depend on python2.4-tk-deadsnakes as well.

 -- Felix Krull <f_krull@gmx.de>  Sat, 05 Jun 2010 14:04:09 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa4) lucid; urgency=low

  * No-change upload because LP refuses the accept ~ppa3.
    * It claims said revision already was uploaded, even after I deleted the
      package and it disappeared from the web interface.

 -- Felix Krull <f_krull@gmx.de>  Sat, 08 May 2010 19:25:39 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa3) lucid; urgency=low

  * python-idle: Correctly depend on python-tk-deadsnakes
  * Build with libreadline-dev instead of libreadline5-dev

 -- Felix Krull <f_krull@gmx.de>  Sat, 08 May 2010 17:17:40 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa2) lucid; urgency=low

  * Built against libdb4.8 instead of 4.6.

 -- Felix Krull <f_krull@gmx.de>  Thu, 06 May 2010 13:57:23 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1~ppa1) lucid; urgency=low

  * Forward-ported from karmic-security.

 -- Felix Krull <f_krull@gmx.de>  Mon, 26 Apr 2010 16:03:43 +0200

python2.4 (2.4.6-1ubuntu3.2.9.10.1) karmic-security; urgency=low

  * SECURITY UPDATE: fix DoS via malformed XML
    - debian/patches/CVE-2009-3720.dpatch: update Modules/expat/xmltok_impl.c
      to not access beyond end of input string
    - CVE-2009-3720
  * SECURITY UPDATE: fix DoS via malformed UTF-8 sequences
    - debian/patches/CVE-2009-3560.dpatch: update Modules/expat/xmlparse.c to
      properly recognize the end of a token
    - CVE-2009-3560
