@@ -95,3 +95,144 @@ Suggests: @PVER@-gdbm-dbg, @PVER@-tk-dbg
 Description: Debug Build of the Python Interpreter (version @VER@)
  Python interpreter configured with --pydebug. Dynamically loaded modules are
  searched in /usr/lib/@PVER@/lib-dynload/debug first.
+Source: @PVER@
+Section: python
+Priority: optional
+Maintainer: Felix Krull <f_krull@gmx.de>
+XSBC-Original-Maintainer: Matthias Klose <doko@debian.org>
+Build-Depends: debhelper (>= 5), autoconf, libreadline-dev, libncursesw5-dev (>= 5.3), tk8.5-dev, libdb4.8-dev, zlib1g-dev, libgdbm-dev, blt-dev (>= 2.4z), libssl-dev, sharutils, libbz2-dev, libbluetooth-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], locales, mime-support, libgpm2 [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], netbase, lsb-release, bzip2
+Build-Depends-Indep: libhtml-tree-perl, texlive-latex-recommended, texinfo, emacs23, debiandoc-sgml, sharutils
+Build-Conflicts: tcl8.3-dev, tk8.3-dev, @PVER@-xml, python-xml
+XS-Python-Version: @VER@
+Standards-Version: 3.8.4
+Homepage: http://python.org/
+
+Package: @PVER@
+Architecture: any
+Priority: @PRIO@
+Depends: @PVER@-minimal (= ${binary:Version}), mime-support, ${shlibs:Depends}
+Suggests: @PVER@-doc, @PVER@-profiler
+Provides: python@VER@-cjkcodecs, @PVER@-plist
+Replaces: @PVER@-minimal (<< 2.4-3), @PVER@-dev (<= 2.4.4-4), idle-@PVER@ (<< 2.4.3-8), python-tk (<< 2.4.3-2)
+Conflicts: @PVER@-dev (<< 2.3.95-2), python-central (<< 0.5), idle-@PVER@ (<< 2.4.3-8), python-tk (<< 2.4.3-2)
+XB-Python-Version: @VER@
+Description: An interactive high-level object-oriented language (version @VER@)
+ Version @VER@ of the high-level, interactive object oriented language,
+ includes an extensive class library with lots of goodies for
+ network programming, system administration, sounds and graphics.
+
+Package: @PVER@-minimal
+Architecture: any
+Priority: @MINPRIO@
+Depends: ${shlibs:Depends}
+Suggests: binfmt-support
+Conflicts: binfmt-support (<< 1.1.2)
+Replaces: @PVER@ (<< 2.4.4-8)
+Recommends:  @PVER@
+XB-Python-Runtime: @PVER@
+XB-Python-Version: @VER@
+Description: A minimal subset of the Python language (version @VER@)
+ This package contains the interpreter and some essential modules.  It can
+ be used in the boot process for some basic tasks.
+ See /usr/share/doc/@PVER@-minimal/README.Debian for a list of the modules
+ contained in this package.
+
+Package: @PVER@-examples
+Architecture: all
+Depends: @PVER@ (>= ${binary:Version})
+Description: Examples for the Python language (v@VER@)
+ Examples, Demos and Tools for Python (v@VER@). These are files included in
+ the upstream Python distribution (v@VER@).
+
+Package: @PVER@-dev
+Architecture: any
+Depends: @PVER@ (= ${binary:Version})
+Recommends: libc6-dev | libc-dev
+Description: Header files and a static library for Python (v@VER@)
+ Header files, a static library and development tools for building
+ Python (v@VER@) modules, extending the Python interpreter or embedding
+ Python (v@VER@) in applications.
+ .
+ Maintainers of Python packages should read README.maintainers.
+
+Package: idle-@PVER@
+Architecture: all
+Depends: @PVER@, @PVER@-tk
+Enhances: @PVER@
+XB-Python-Version: @VER@
+Description: An IDE for Python (v@VER@) using Tkinter
+ IDLE is an Integrated Development Environment for Python (v@VER@).
+ IDLE is written using Tkinter and therefore quite platform-independent.
+
+Package: @PVER@-doc
+Section: doc
+Architecture: all
+Suggests: @PVER@
+Description: Documentation for the high-level object-oriented language Python (v@VER@)
+ These is the official set of documentation for the interactive high-level
+ object-oriented language Python (v@VER@). All documents are provided
+ in HTML format, some in info format. The package consists of ten documents:
+ .
+   * What's New in Python@VER@
+   * Tutorial
+   * Python Library Reference
+   * Macintosh Module Reference
+   * Python Language Reference
+   * Extending and Embedding Python
+   * Python/C API Reference
+   * Installing Python Modules
+   * Documenting Python
+   * Distributing Python Modules
+
+Package: @PVER@-dbg
+Architecture: any
+Priority: extra
+Depends: @PVER@ (>= ${binary:Version}), ${shlibs:Depends}
+Suggests: @PVER@-gdbm-dbg, @PVER@-tk-dbg
+Description: Debug Build of the Python Interpreter (version @VER@)
+ Python interpreter configured with --pydebug. Dynamically loaded modules are
+ searched in /usr/lib/@PVER@/lib-dynload/debug first.
+
+
+Package: @PVER@-tk
+Architecture: any
+Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Provides: ${python:Provides}
+Suggests: tix, @PVER@-tk-dbg
+XB-Python-Version: ${python:Versions}
+Description: Tkinter - Writing Tk applications with Python
+ A module for writing portable GUI applications with Python using Tk.
+ Also known as Tkinter.
+
+Package: @PVER@-gdbm
+Architecture: any
+Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Provides: ${python:Provides}
+Suggests: @PVER@-gdbm-dbg
+XB-Python-Version: ${python:Versions}
+Description: GNU dbm database support for Python
+ GNU dbm database module for Python. Install this if you want to
+ create or read GNU dbm database files with Python.
+
+Package: @PVER@-tk-dbg
+Architecture: any
+Priority: extra
+Section: debug
+Depends: ${python:Depends}, @PVER@-tk (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Description: Tkinter - Writing Tk applications with Python (debug extension)
+ A module for writing portable GUI applications with Python using Tk.
+ Also known as Tkinter.
+ .
+ This package contains the extensions built for the python debug interpreter.
+
+Package: @PVER@-gdbm-dbg
+Architecture: any
+Priority: extra
+Section: debug
+Depends: ${python:Depends}, @PVER@-gdbm (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Description: GNU dbm database support for Python (debug extension)
+ GNU dbm database module for Python. Install this if you want to
+ create or read GNU dbm database files with Python.
+ .
+ This package contains the extensions built for the python debug interpreter.
+
