@@ -50,8 +50,8 @@ MIN_ENCODINGS := $(foreach i, \
 			encodings/$(i)) \
 		 base64.py codecs.py stringprep.py
 
-with_tk := no
-with_gdbm := no
+with_tk := yes
+with_gdbm := yes
 with_interp := static
 #with_interp := shared
 
